force-app/main/default/objects/Follow_Up__c/Follow_Up__c.object-meta.xml
<CustomObject>
    <label>Follow Up</label>
    <nameField>
        <displayFormat>FU-{0000}</displayFormat>
        <label>Follow Up Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Follow Ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>