force-app/main/default/objects/Follow_Up__c/fields/Follow_Up_Type__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Type__c</fullName>
    <label>Follow Up Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Call</fullName>
            </value>
            <value>
                <fullName>Document Request</fullName>
            </value>
            <value>
                <fullName>Reminder</fullName>
            </value>
            <value>
                <fullName>Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>